--- a/blog/src/main/resources/templates/login.html
+++ b/blog/src/main/resources/templates/login.html
@@ -56,21 +56,21 @@
         </div>
     </nav>
     <div class="container d-flex justify-content-center main">
-        <form class="form-signin" style="width:400px;">
+        <form class="form-signin" style="width:400px;" action="#" th:action="@{/check}" method="POST">
             <img class="mb-4" th:src="@{/img/logo.png}" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
             <label for="inputEmail" class="sr-only">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+            <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
             <br>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+            <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required="">
             <div class="checkbox mb-3">
                 <label>
             <input type="checkbox" value="remember-me"> Remember me
-          </label>
+            </label>
             </div>
             <button class="btn btn-lg btn-block" type="submit">Sign in</button>
-            <p class="mt-5 mb-3 text-muted"></p>
+            <p class="mt-5 mb-3 text-muted" th:text="${isValid}"></p>
         </form>
     </div>
     <footer class="con">
