--- a/blog/src/main/resources/templates/signup.html
+++ b/blog/src/main/resources/templates/signup.html
@@ -54,42 +54,42 @@
         </div>
     </nav>
     <div class="container text-center main">
-        <form action="" class="form">
+        <form action="#" th:action="@{/save}" class="form" th:method="POST">
             <img class="mb-4" th:src="@{/img/logo.png}" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Please Register Yourself</h1>
             <div class="form-row">
                 <div class="form-group col-md-6">
+                    <label for="inputName">Name</label>
+                    <input type="text" name="username" class="form-control" placeholder="Name" required>
+                </div>
+                <div class="form-group col-md-6">
                     <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+                    <input type="email" name="emailId" class="form-control" id="inputEmail4" placeholder="Email" required>
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputPassword4">Password</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Password" required>
+                    <input type="password" name="password" class="form-control" id="inputPassword4" placeholder="Password" required>
                 </div>
-            </div>
-            <div class="form-group">
-                <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
-            </div>
-            <div class="form-group">
-                <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" required>
+                <div class="form-group col-md-6">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" name="address" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
+                </div>
             </div>
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputCity">City</label>
-                    <input type="text" class="form-control" id="inputCity" required>
+                    <input name="city" type="text" class="form-control" id="inputCity" required>
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputState">State</label>
-                    <select id="inputState" class="form-control">
+                    <select id="inputState" name="state" class="form-control">
                       <option selected>Choose...</option>
-                      <option>...</option>
+                      <option></option>
                     </select>
                 </div>
                 <div class="form-group col-md-2">
                     <label for="inputZip">Zip</label>
-                    <input type="text" class="form-control" id="inputZip" required>
+                    <input type="text" name="zipcode" class="form-control" id="inputZip" required>
                 </div>
             </div>
             <div class="form-group">
