--- a/blog/src/main/resources/templates/createPost.html
+++ b/blog/src/main/resources/templates/createPost.html
@@ -63,7 +63,7 @@
         </div>
     </nav>
     <div class="container text-center main">
-        <form action="#" class="form" th:action="@{/createblog}">
+        <form action="#" class="form" th:action="@{/createblog}" enctype="multipart/form-data" method="POST">
             <img class="mb-4" th:src="@{/img/logo.png}" alt="" width="72" height="72">
             <h1 class="h3 mb-3 font-weight-normal">Create your Post</h1>
             <div class="form-group">
