--- a/blog/src/main/resources/templates/profile.html
+++ b/blog/src/main/resources/templates/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Blog</title>
+    <title>Profile</title>
     <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -47,7 +47,6 @@
                         <span th:if="${session.currentUser!=null}" th:text="${session.currentUser.username}"></span>
                     </a>
                     <div class="dropdown-menu justify-content-lg-end" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" th:href="@{/profile}">Profile</a>
                         <a class="dropdown-item" th:href="@{/logout}">Logout</a>
                         <!-- <div class="dropdown-divider"></div>
                         <a class="dropdown-item" th:href="#">Something else here</a> -->
@@ -56,59 +55,45 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-12 main-heading">
-                <article>
-                    <section>
-                        <h1 class="display-6">Blog Website</h1>
-                        <p>All about yasterday</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolorem quo molestiae aperiam blanditiis amet odio cupiditate esse odit, nisi obcaecati voluptatibus ipsum. Debitis cupiditate maiores natus, iste ipsum eveniet.</p>
-                    </section>
-                </article>
-            </div>
-        </div>
-    </div>
-    <div class="row w-100">
-    </div>
-    <div class="container-fluid justify-content-center">
-        <div class="row">
-            <div class="card col-sm-3 m-4" th:each="blog : ${blogs}" th:if="@{blogs!=null}">
-                <div class="col-mb-4">
-                    <img class="card-img-top" th:src="'/img/'+${blog.imageName}" style="height: 225px;
-                    width: 100%;
-                    display: block;" alt="">
-                    <div class="card-body">
-                        <div class="card-text">
-                            <h1 th:text="${blog.title}"></h1>
-                            <p th:text="${blog.description}"></p>
-                        </div>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <form th:action="@{'/view/'+${blog.blogId}}">
-                                    <input type="submit" class="btn btn-sm btn-outline-secondary" value="View" />
-                                </form>
-                            </div>
-                            <p th:text="${blog.byUserId}">by</p>
-                        </div>
-                    </div>
+    <div class="container">
+        <form action="#" th:action="@{/saveUser}" class="form" th:method="GET">
+            <img class="mb-4" th:src="@{/img/logo.png}" alt="" width="72" height="72">
+            <h1 class="h3 mb-3 font-weight-normal"></h1>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputName">Name</label>
+                    <input type="text" th:value="${user.username}" name="username" class="form-control" placeholder="Name" required>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputEmail4">Email</label>
+                    <input type="email" th:value="${user.emailId}" name="emailId" class="form-control" id="inputEmail4" placeholder="Email" required>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" th:value="${user.address}" name="address" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
                 </div>
             </div>
-        </div>
-        <nav aria-label="...">
-            <ul class="pagination d-flex justify-content-center">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1">Previous</a>
-                </li>
-                <li class="page-item active"><a class="page-link" th:href="@{/next/{page}(page=1)}">1</a></li>
-                <li class="page-item">
-                    <a class="page-link" th:href="@{/next/{page}(page=2)}">2 </a>
-                </li>
-                <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                </li>
-            </ul>
-        </nav>
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="inputCity">City</label>
+                    <input name="city" th:value="${user.city}" type="text" class="form-control" id="inputCity" required>
+                </div>
+                <div class="form-group col-md-4" th:object="${state}">
+                    <label for="inputState">State</label>
+                    <select id="states" name="state" class="form-control">
+                        <option disabled selected th:value="${user.state}" th:text="${user.state}"></option>
+                        <option th:each="state: ${states}" th:value="${state.cityName}" th:text="${state.cityName}"></option>
+                    </select>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputZip">Zip</label>
+                    <input type="text" th:value="${user.zipcode}" name="zipcode" class="form-control" id="inputZip" required>
+                </div>
+            </div>
+            <button type="submit" class="btn">Save</button>
+        </form>
+        <br>
+        <hr>
     </div>
     <footer class="con">
         <div class="container-fluid">
@@ -142,6 +127,5 @@
         </div>
     </footer>
 </body>
-
 
 </html>
