--- a/blog/src/main/resources/templates/view.html
+++ b/blog/src/main/resources/templates/view.html
@@ -41,31 +41,31 @@
             </ul>
         </div>
     </nav>
-    <div class="container-fluid main">
+    <div class="container main justify-content-center m-3">
         <div class="row">
-            <div class="col-sm-12 main-heading">
-                <img th:src="@{/img/label.png}" alt="" style=" height: 100%; width: 100%; display: block;">
+            <div class="col-sm-6 main-heading">
+                <img th:src="'/img/'+${blog.imageName}" style=" height: 100%; width: 100%; ">
             </div>
         </div>
         <div class="row w-100 ">
         </div>
         <div class="row ">
-            <div class="col-sm-12" th:object="${blog}">
+            <div class="col-sm-12 " th:object="${blog} ">
                 <article>
                     <section>
-                        <h1 class="display-6 " th:text="${blog.title}"></h1>
-                        <p th:text="${blog.description}"></p>
-                        <p th:text="${blog.byUserId}"></p>
+                        <h1 class="display-6 " th:text="${blog.title} "></h1>
+                        <p th:text="${blog.description} "></p>
+                        <p th:text="${blog.byUserId} "></p>
                     </section>
                 </article>
             </div>
         </div>
     </div>
-    <footer class="con">
+    <footer class="con ">
         <div class="container-fluid ">
             <div class="row ">
                 <div class="col-6 ">
-                    <img th:src="@{/img/label.png}" class="w-50 p-3 " alt=" ">
+                    <img th:src="@{/img/label.png} " class="w-50 p-3 " alt=" ">
                 </div>
                 <div class="col-6 ">
                     <ul style="list-style: none; " class="links ">
